# bilibili-cache-converter

./: .gitignore  .prettierignore  ADVANCED_LOGGING_GUIDE.md  API_DOCUMENTATION.md  CHANGELOG.md  CLEANUP_REPORT.md  CODE_AUDIT_REPORT.md  CODE_QUALITY_IMPROVEMENTS.md  COMPREHENSIVE_SOLUTION.md  CRASH_FIX_AND_LOGGING_REPORT.md  CRASH_FIX_REPORT.md  DEPLOYMENT_GUIDE.md  FILE_LIST_OPTIMIZATION_PLAN.md  GIT_COMMIT_PREPARATION.md  GIT_READY_REPORT.md  GIT_SUBMISSION_GUIDE.md  INTEGRITY_VALIDATION.md  LICENSE  LOGGING_GUIDE.md  LOG_AND_BUTTON_TEST_REPORT.md  PROJECT_EVALUATION.md  PROJECT_README.md  README.md  README_GIT.md  SPEC.md  STARTUP_CRASH_DIAGNOSIS.md  TECHNICAL_ARCHITECTURE.md  TECHNICAL_IMPLEMENTATION.md  build.bat  build_full.bat  build_installer.bat  build_release.bat  index.html  package-lock.json  package.json  prepare-commit.ps1  prepare-commit.sh  tailwind.config.js  tsconfig.app.json  vite.config.ts  (+1 more)
.codebuddy/plans/: bilibili-cache-converter_29557984.md  code-review-report_7d55d6f6.md  代码库检查与文档补充计划_f73485b6.md  优化文件转换输出逻辑_5aaf375c.md  完善程序界面功能_dc077065.md  性能优化与功能增强计划_797b731d.md
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: download-ffmpeg.bat
src-tauri/src/: converter.rs  lib.rs  logger.rs  main.rs  scanner.rs
src/__tests__/: hooks.test.tsx  setup.ts  useThrottle.test.ts  utils.test.ts
src/components/: ErrorBoundary.tsx
src/components/ui/: button.tsx  (+5 more)
src/hooks/: useThrottle.ts  useVirtualList.ts
src/lib/: utils.ts
src/types/: index.ts
