[package]
name = "bilibili-converter"
version = "1.0.0"
description = "Bilibili缓存转换为通用格式"
authors = ["Developer"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "bilibili_converter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"

tokio = { version = "1", features = ["full"] }
walkdir = "2.5"
regex = "1.10"
encoding_rs = "0.8"
once_cell = "1.19"
thiserror = "1.0"
num_cpus = "1.16"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
